--- a/Project/vite-project/src/AddUser.css
+++ b/Project/vite-project/src/AddUser.css
@@ -1,31 +1,22 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat:400,800");
-
-
-body {
-  font-family: 'Montserrat', sans-serif;
-}
 
 .add-up-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  background-color: #fff;
-  margin-top: 0px;
+  height: 50vh;
   
-
-  background-size:cover;
-  background-position:center;
+  margin-top: 0px;
+  background-size: cover;
+  background-position: center;
 }
 
 .add-up-form {
   width: 300px;
-  padding: 30px 20px;
+  padding: 10px 10px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1), 0 10px 20px rgba(0, 0, 0, 0.05);
-  
   background-image: linear-gradient(to right, #e49a12, #caeb39);
-  background-color: rgb(255, 255, 255);
+  
   background-size: cover;
   backdrop-filter: blur(5px);
 }
@@ -36,49 +27,53 @@ body {
   color: #272a2e;
 }
 
-.add-form-container {
-  position: absolute;
-  top: 0;
-  height: 100%;
-  transition: all 0.6s ease-in-out;
+label {
+  display: block;
+  margin-bottom: 8px;
+  font-size: 14px;
 }
 
-label {
-    display: block;
-    margin-bottom: 8px;
-    font-size: 14px;
-  }
+input {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 5px;
+  box-sizing: border-box;
+  border-radius: 4px;
+  border: 1px solid #dddddd;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+  color: #333;
+}
+
+input:focus {
+  outline: none;
+  box-shadow: 0 0 2px 1px #3498db;
+}
+
+button {
+  width: 100%;
+  padding: 10px;
+  background-color: #272a2e;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+.error-message{
+  margin-bottom: 5px;
+  color: red;
+  font-size: small;
+}
+.close-popup{
+  margin-left: 295px;
+  cursor: pointer;
   
-  input {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 16px;
-    box-sizing: border-box;
-    border-radius: 4px;
-    border: 1px solid #dddddd;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-    color: #333;
+}
+
+/* Adjust button padding and font size for smaller screens */
+@media (max-width: 575.98px) {
+  .add-up-form {
+      width: 90%;
+      padding: 20px;
   }
-  
-  input:focus {
-    outline: none;
-    box-shadow: 0 0 2px 1px #3498db;
-  }
-  
-  button {
-    width: 100%;
-    padding: 10px;
-    background-color: #272a2e;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-  }
-  .close-popup {
-    
-    
-    
-    font-size: 30px; /* Increase the font size */
-    cursor: pointer;
-  }
+}
