--- a/Project/vite-project/src/App.css
+++ b/Project/vite-project/src/App.css
@@ -10,7 +10,10 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-image: url('https://images.unsplash.com/photo-1472289065668-ce650ac443d2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fGxvZ2lufGVufDB8fDB8fHww');
+  
+  
+  background-image: url('https://images.unsplash.com/photo-1530543787849-128d94430c6b?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fHllbGxvdyUyMGJhY2tncm91bmR8ZW58MHx8MHx8fDA%3D');
+  
 
   background-size:cover;
   background-position:center;
@@ -22,7 +25,7 @@ body {
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1), 0 10px 20px rgba(0, 0, 0, 0.05);
   
-  background-image: linear-gradient(to right, #e49a12, #caeb39);
+  background-image: linear-gradient(to right, #e7d31c, #f3ffc0);
   background-color: rgb(255, 255, 255);
   background-size: cover;
   backdrop-filter: blur(5px);
@@ -48,7 +51,7 @@ body {
 }
 
 .social-container a {
-  border: 1px solid #dddddd;
+  border: 1px solid #272a2e;
   border-radius: 50%;
   display: inline-flex;
   justify-content: center;
@@ -57,6 +60,7 @@ body {
   height: 40px;
   width: 40px;
   transition: all 0.3s ease-in-out;
+  
 }
 
 .social-container a:hover {
@@ -95,4 +99,8 @@ button {
   border-radius: 4px;
   cursor: pointer;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+h6{
+  text-decoration: underline;
+  text-align: center;
 }
